--- a/index.html
+++ b/index.html
@@ -247,10 +247,10 @@
     <div class="col-md-4 mb-4">
       <div class="card team-card fade-in-on-scroll">
         <div class="card-img-container">
-          <img src="images/logo.jpeg" class="card-img-top" alt="Image 1">
+          <img src="./team/piyush.png" class="card-img-top" alt="Image 1">
           <div class="card-overlay">
-            <h5 class="card-title">Name 1</h5>
-            <p class="card-text">Designation 1</p>
+            <h5 class="card-title">Piyush Bharara</h5>
+            <p class="card-text">Founder</p>
           </div>
         </div>
       </div>
@@ -259,10 +259,10 @@
     <div class="col-md-4 mb-4">
       <div class="card team-card fade-in-on-scroll">
         <div class="card-img-container">
-          <img src="images/logo.jpeg" class="card-img-top" alt="Image 2">
+          <img src="./team/uday.png" class="card-img-top" alt="Image 2">
           <div class="card-overlay">
-            <h5 class="card-title">Name 2</h5>
-            <p class="card-text">Designation 2</p>
+            <h5 class="card-title">Uday Singh</h5>
+            <p class="card-text">Co-Founder</p>
           </div>
         </div>
       </div>
@@ -271,10 +271,10 @@
     <div class="col-md-4 mb-4">
       <div class="card team-card fade-in-on-scroll">
         <div class="card-img-container">
-          <img src="images/logo.jpeg" class="card-img-top" alt="Image 3">
+          <img src="./team/aditya.png" class="card-img-top" alt="Image 3">
           <div class="card-overlay">
-            <h5 class="card-title">Name 3</h5>
-            <p class="card-text">Designation 3</p>
+            <h5 class="card-title">Aditya Kumar</h5>
+            <p class="card-text">Tech Support</p>
           </div>
         </div>
       </div>
@@ -285,10 +285,10 @@
     <div class="col-md-4 mb-4">
       <div class="card team-card fade-in-on-scroll">
         <div class="card-img-container">
-          <img src="images/logo.jpeg" class="card-img-top" alt="Image 4">
+          <img src="./team/ayutes.png" class="card-img-top" alt="Image 4">
           <div class="card-overlay">
-            <h5 class="card-title">Name 4</h5>
-            <p class="card-text">Designation 4</p>
+            <h5 class="card-title">Ayutes Kumar</h5>
+            <p class="card-text">Business Finance</p>
           </div>
         </div>
       </div>
@@ -297,10 +297,10 @@
     <div class="col-md-4 mb-4">
       <div class="card team-card fade-in-on-scroll">
         <div class="card-img-container">
-          <img src="images/logo.jpeg" class="card-img-top" alt="Image 5">
+          <img src="./team/devansh.png" class="card-img-top" alt="Image 5">
           <div class="card-overlay">
-            <h5 class="card-title">Name 5</h5>
-            <p class="card-text">Designation 5</p>
+            <h5 class="card-title">Devansh Chauhan</h5>
+            <p class="card-text">Public Relation</p>
           </div>
         </div>
       </div>
@@ -309,10 +309,10 @@
     <div class="col-md-4 mb-4">
       <div class="card team-card fade-in-on-scroll">
         <div class="card-img-container">
-          <img src="images/logo.jpeg" class="card-img-top" alt="Image 6">
+          <img src="./team/dhruv.png" class="card-img-top" alt="Image 6">
           <div class="card-overlay">
-            <h5 class="card-title">Name 6</h5>
-            <p class="card-text">Designation 6</p>
+            <h5 class="card-title">Dhruv Sharma</h5>
+            <p class="card-text">Creative Head</p>
           </div>
         </div>
       </div>
@@ -324,10 +324,10 @@
     <div class="col-md-4 mb-4">
       <div class="card team-card fade-in-on-scroll">
         <div class="card-img-container">
-          <img src="images/logo.jpeg" class="card-img-top" alt="Image 7">
+          <img src="./team/harshita.png" class="card-img-top" alt="Image 7">
           <div class="card-overlay">
-            <h5 class="card-title">Name 7</h5>
-            <p class="card-text">Designation 7</p>
+            <h5 class="card-title">Harshita Lakhanpal</h5>
+            <p class="card-text">Social Media Manager</p>
           </div>
         </div>
       </div>
@@ -336,19 +336,19 @@
     <div class="col-md-4 mb-4">
       <div class="card team-card fade-in-on-scroll">
         <div class="card-img-container">
-          <img src="images/logo.jpeg" class="card-img-top" alt="Image 8">
+          <img src="./team/kirti.png" class="card-img-top" alt="Image 8">
           <div class="card-overlay">
-            <h5 class="card-title">Name 8</h5>
-            <p class="card-text">Designation 8</p>
+            <h5 class="card-title">Kirti Bhatia</h5>
+            <p class="card-text">Social Media Manager</p>
           </div>
         </div>
       </div>
     </div>
   
-    <div class="col-md-4 mb-4">
+    <!-- <div class="col-md-4 mb-4">
       <div class="card team-card fade-in-on-scroll">
         <div class="card-img-container">
-          <img src="images/logo.jpeg" class="card-img-top" alt="Image 9">
+          <img src="./team/logo.png" class="card-img-top" alt="Image 9">
           <div class="card-overlay">
             <h5 class="card-title">Name 9</h5>
             <p class="card-text">Designation 9</p>
@@ -357,7 +357,7 @@
       </div>
     </div>
   </div>
-  
+   -->
 <!--testimonials-->
   <section id="testimonials" class="py-5">
     <div class="container">
