--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                     <p class="card-text">Feeding love and care to our gentle companions—nourishing both lives and hearts.</p>
                   </div>
                 </div>
-              </div>images/
+              </div>
             </div>
           </div>
         </section>
