--- a/index.html
+++ b/index.html
@@ -243,26 +243,41 @@
   
     <div class="container">
         <!-- First Row -->
+        
 <div class="row mb-5 gx-4">
+
     <div class="col-md-4 mb-4">
       <div class="card team-card fade-in-on-scroll">
         <div class="card-img-container">
-          <img src="./team/piyush.png" class="card-img-top" alt="Image 1">
+          <img src="./team/dhruv.png" class="card-img-top" alt="Image 6">
           <div class="card-overlay">
-            <h5 class="card-title">Piyush Bharara</h5>
-            <p class="card-text">Founder</p>
+            <h5 class="card-title">Dhruv Sharma</h5>
+            <p class="card-text">Co-Founder</p>
           </div>
         </div>
       </div>
     </div>
-  
+  </div>
+  <div class="row mb-5 gx-4">
+    <div class="col-md-4 mb-4">
+      <div class="card team-card fade-in-on-scroll">
+        <div class="card-img-container">
+          <img src="./team/ayutes.png" class="card-img-top" alt="Image 4">
+          <div class="card-overlay">
+            <h5 class="card-title">Ayutes Kumar</h5>
+            <p class="card-text">Co-Founder</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <div class="col-md-4 mb-4">
       <div class="card team-card fade-in-on-scroll">
         <div class="card-img-container">
           <img src="./team/uday.png" class="card-img-top" alt="Image 2">
           <div class="card-overlay">
             <h5 class="card-title">Uday Singh</h5>
-            <p class="card-text">Co-Founder</p>
+            <p class="card-text">Operations Head</p>
           </div>
         </div>
       </div>
@@ -274,50 +289,40 @@
           <img src="./team/aditya.png" class="card-img-top" alt="Image 3">
           <div class="card-overlay">
             <h5 class="card-title">Aditya Kumar</h5>
-            <p class="card-text">Tech Support</p>
+            <p class="card-text">Head of Product and Tech</p>
           </div>
         </div>
       </div>
     </div>
   </div>
   <!-- Second Row -->
-  <div class="row mb-5 gx-4">
+
+
+
     <div class="col-md-4 mb-4">
       <div class="card team-card fade-in-on-scroll">
         <div class="card-img-container">
-          <img src="./team/ayutes.png" class="card-img-top" alt="Image 4">
+          <img src="./team/piyush.png" class="card-img-top" alt="Image 1">
           <div class="card-overlay">
-            <h5 class="card-title">Ayutes Kumar</h5>
-            <p class="card-text">Business Finance</p>
+            <h5 class="card-title">Piyush Bharara</h5>
+            <p class="card-text">Head of Feeding Program</p>
           </div>
         </div>
       </div>
     </div>
-  
+      
     <div class="col-md-4 mb-4">
       <div class="card team-card fade-in-on-scroll">
         <div class="card-img-container">
           <img src="./team/devansh.png" class="card-img-top" alt="Image 5">
           <div class="card-overlay">
             <h5 class="card-title">Devansh Chauhan</h5>
-            <p class="card-text">Public Relation</p>
+            <p class="card-text">People and Partnerships</p>
           </div>
         </div>
       </div>
     </div>
   
-    <div class="col-md-4 mb-4">
-      <div class="card team-card fade-in-on-scroll">
-        <div class="card-img-container">
-          <img src="./team/dhruv.png" class="card-img-top" alt="Image 6">
-          <div class="card-overlay">
-            <h5 class="card-title">Dhruv Sharma</h5>
-            <p class="card-text">Creative Head</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
   
   <!-- Third Row -->
   <div class="row mb-5 gx-4">
@@ -327,7 +332,7 @@
           <img src="./team/harshita.png" class="card-img-top" alt="Image 7">
           <div class="card-overlay">
             <h5 class="card-title">Harshita Lakhanpal</h5>
-            <p class="card-text">Social Media Manager</p>
+            <p class="card-text">Creative Head</p>
           </div>
         </div>
       </div>
