--- a/index.html
+++ b/index.html
@@ -237,120 +237,115 @@
 
     <!-- Our Team Section -->
 <section id="our-team" class="scrollspy-section py-5">
-    <div class="container text-center">
-      <h2 style="font-family: 'Abril Fatface', cursive;">Our Team</h2>
-    </div>
-  
-    <div class="container">
-        <!-- First Row -->
-        
-<div class="row mb-5 gx-4">
+  <div class="container text-center mb-5">
+    <h2 style="font-family: 'Abril Fatface', cursive;">Our Team</h2>
+  </div>
 
-    <div class="col-md-4 mb-4">
-      <div class="card team-card fade-in-on-scroll">
-        <div class="card-img-container">
-          <img src="./team/dhruv.png" class="card-img-top" alt="Image 6">
-          <div class="card-overlay">
-            <h5 class="card-title">Dhruv Sharma</h5>
-            <p class="card-text">Co-Founder</p>
+  <div class="container">
+    <div class="row mb-5 gx-4">
+      <!-- Row 1 -->
+      <div class="col-md-4 mb-4">
+        <div class="card team-card fade-in-on-scroll">
+          <div class="card-img-container">
+            <img src="./team/dhruv.png" class="card-img-top" alt="Dhruv Sharma">
+            <div class="card-overlay">
+              <h5 class="card-title">Dhruv Sharma</h5>
+              <p class="card-text">Co-Founder</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-4 mb-4">
+        <div class="card team-card fade-in-on-scroll">
+          <div class="card-img-container">
+            <img src="./team/ayutes.png" class="card-img-top" alt="Ayutes Kumar">
+            <div class="card-overlay">
+              <h5 class="card-title">Ayutes Kumar</h5>
+              <p class="card-text">Co-Founder</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-4 mb-4">
+        <div class="card team-card fade-in-on-scroll">
+          <div class="card-img-container">
+            <img src="./team/uday.png" class="card-img-top" alt="Uday Singh">
+            <div class="card-overlay">
+              <h5 class="card-title">Uday Singh</h5>
+              <p class="card-text">Operations Head</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Row 2 -->
+      <div class="col-md-4 mb-4">
+        <div class="card team-card fade-in-on-scroll">
+          <div class="card-img-container">
+            <img src="./team/aditya.png" class="card-img-top" alt="Aditya Kumar">
+            <div class="card-overlay">
+              <h5 class="card-title">Aditya Kumar</h5>
+              <p class="card-text">Head of Product and Tech</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-4 mb-4">
+        <div class="card team-card fade-in-on-scroll">
+          <div class="card-img-container">
+            <img src="./team/piyush.png" class="card-img-top" alt="Piyush Bharara">
+            <div class="card-overlay">
+              <h5 class="card-title">Piyush Bharara</h5>
+              <p class="card-text">Head of Feeding Program</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-4 mb-4">
+        <div class="card team-card fade-in-on-scroll">
+          <div class="card-img-container">
+            <img src="./team/devansh.png" class="card-img-top" alt="Devansh Chauhan">
+            <div class="card-overlay">
+              <h5 class="card-title">Devansh Chauhan</h5>
+              <p class="card-text">People and Partnerships</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Row 3 -->
+      <div class="col-md-4 mb-4">
+        <div class="card team-card fade-in-on-scroll">
+          <div class="card-img-container">
+            <img src="./team/harshita.png" class="card-img-top" alt="Harshita Lakhanpal">
+            <div class="card-overlay">
+              <h5 class="card-title">Harshita Lakhanpal</h5>
+              <p class="card-text">Creative Head</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-4 mb-4">
+        <div class="card team-card fade-in-on-scroll">
+          <div class="card-img-container">
+            <img src="./team/kirti.png" class="card-img-top" alt="Kirti Bhatia">
+            <div class="card-overlay">
+              <h5 class="card-title">Kirti Bhatia</h5>
+              <p class="card-text">Social Media Manager</p>
+            </div>
           </div>
         </div>
       </div>
     </div>
   </div>
-  <div class="row mb-5 gx-4">
-    <div class="col-md-4 mb-4">
-      <div class="card team-card fade-in-on-scroll">
-        <div class="card-img-container">
-          <img src="./team/ayutes.png" class="card-img-top" alt="Image 4">
-          <div class="card-overlay">
-            <h5 class="card-title">Ayutes Kumar</h5>
-            <p class="card-text">Co-Founder</p>
-          </div>
-        </div>
-      </div>
-    </div>
+</section>
 
-    <div class="col-md-4 mb-4">
-      <div class="card team-card fade-in-on-scroll">
-        <div class="card-img-container">
-          <img src="./team/uday.png" class="card-img-top" alt="Image 2">
-          <div class="card-overlay">
-            <h5 class="card-title">Uday Singh</h5>
-            <p class="card-text">Operations Head</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  
-    <div class="col-md-4 mb-4">
-      <div class="card team-card fade-in-on-scroll">
-        <div class="card-img-container">
-          <img src="./team/aditya.png" class="card-img-top" alt="Image 3">
-          <div class="card-overlay">
-            <h5 class="card-title">Aditya Kumar</h5>
-            <p class="card-text">Head of Product and Tech</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!-- Second Row -->
-
-
-
-    <div class="col-md-4 mb-4">
-      <div class="card team-card fade-in-on-scroll">
-        <div class="card-img-container">
-          <img src="./team/piyush.png" class="card-img-top" alt="Image 1">
-          <div class="card-overlay">
-            <h5 class="card-title">Piyush Bharara</h5>
-            <p class="card-text">Head of Feeding Program</p>
-          </div>
-        </div>
-      </div>
-    </div>
-      
-    <div class="col-md-4 mb-4">
-      <div class="card team-card fade-in-on-scroll">
-        <div class="card-img-container">
-          <img src="./team/devansh.png" class="card-img-top" alt="Image 5">
-          <div class="card-overlay">
-            <h5 class="card-title">Devansh Chauhan</h5>
-            <p class="card-text">People and Partnerships</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  
-  
-  <!-- Third Row -->
-  <div class="row mb-5 gx-4">
-    <div class="col-md-4 mb-4">
-      <div class="card team-card fade-in-on-scroll">
-        <div class="card-img-container">
-          <img src="./team/harshita.png" class="card-img-top" alt="Image 7">
-          <div class="card-overlay">
-            <h5 class="card-title">Harshita Lakhanpal</h5>
-            <p class="card-text">Creative Head</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  
-    <div class="col-md-4 mb-4">
-      <div class="card team-card fade-in-on-scroll">
-        <div class="card-img-container">
-          <img src="./team/kirti.png" class="card-img-top" alt="Image 8">
-          <div class="card-overlay">
-            <h5 class="card-title">Kirti Bhatia</h5>
-            <p class="card-text">Social Media Manager</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  
-    <!-- <div class="col-md-4 mb-4">
+        <!-- <div class="col-md-4 mb-4">
       <div class="card team-card fade-in-on-scroll">
         <div class="card-img-container">
           <img src="./team/logo.png" class="card-img-top" alt="Image 9">
